--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,6 +29,12 @@ body.sticky-bottom-footer {
   padding-bottom: 0;
 }
 
+@media (max-width: 767.98px) {
+  body {
+    padding-bottom: 0;
+  }
+}
+
 .container {
   max-width: v.$max-content-width;
 }
